--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -194,7 +194,7 @@
       .p-btn__text
         出品する
       .p-btn__icon
-        = link_to image_tag("icon_camera.png", class: "tag") 
+        = link_to image_tag("icon_camera.png", class: "tag"), new_item_path
 
     
 
