--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -525,4 +525,19 @@
       }
     }
   }
+  .footer {
+    height: 220px;
+    background-color: gainsboro;
+    position: relative;
+    .footer-logo {
+      width: 185px;
+      height: 50px;
+      margin: 0 auto;
+      .logo {
+        width: 185px;
+        height: 50px;
+        margin-top: 50px;
+      }
+    }
+  }
 }
