--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
@@ -410,15 +411,94 @@ body {
     
     .pickup-1 {
       width: 100%;
-      height: 426px;
-      background-color: gainsboro;
+      height: 452px;
+      padding-top: 80px;
+      background-color: #f8f8f8;
+      &__head {
+        color: black;
+        font-size: 28px;
+        font-weight: 600;
+        text-align: center;
+      }
+      .jumpto-listing {
+        display: block;
+        color: #3ccace;
+        font-size: 24px;
+        font-weight: bold;
+        text-align: center;
+      }
     }
     .pickup-2 {
       width: 100%;
       height: 532px;
-      background-color: gainsboro;
+      padding-top: 80px;
+      background-color: #f8f8f8;
       background-size: cover;
+      &__head {
+        color: black;
+        font-size: 28px;
+        font-weight: 600;
+        text-align: center;
+      }
+      .jumpto-archive {
+        display: block;
+        color: #3ccace;
+        font-size: 24px;
+        font-weight: bold;
+        text-align: center;
+      }
     }
+    .item-boxes {
+      width: 780px;
+      margin: 26px auto;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row-reverse;
+      .item:hover {
+        background-color: rgba(44, 89, 240, 0.4);
+        transition: color 0.3s ease 0s;
+      }
+      .item {
+        width: 220px;
+        height: 245px;
+        color: black;
+        background-color: white;
+        
+        .photo > img {
+          height: 150px;
+          width: 100%;
+          text-align: center;
+          line-height: 150px;
+          background-color: rgba(21, 235, 21, 0.6);
+        }
+        .supplement {
+          padding: 16px;
+          height: 90px;
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          .information {
+            font-size: 16px;
+            &__price-option {
+              font-size: 10px;
+            }
+          }
+          .like-function {
+            display: flex;
+            justify-content: space-between;
+            line-height: 70px;
+            width: 30px;
+            .like-btn {
+              font-size: 14px;
+            }
+            .like-count {
+              font-size: 16px;
+            }
+          }
+        }
+      }
+    }
+    
     
     .appbanner {
       width: 1440;
