--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -4,26 +4,31 @@
       = link_to image_tag("logo.png", class: "logo"), root_path
   
   .main
-    .images-section
-      .images-main
-        .images-box
-          .images-box__header
-            .images-box__header__title
-              出品画像
-            .images-box__header__attention
-              必須
-          .images-box__text
-            最大10枚までアップロードできます
-          .images-box__upload
-            .images-box__upload__icon
-              = image_tag("icon_camera.png", class: "camera")
-            .images-box__upload__messages
-              %p
-                ドラッグアンドドロップ
-              %p
-                またはクリックしてファイルをアップロード
-          .images-box__message
-            画像がありません
+    = form_with model: @item, local: true do |f|
+      .images-section
+        .images-main
+          .images-box
+            .images-box__header
+              .images-box__header__title
+                出品画像
+              .images-box__header__attention
+                必須
+            .images-box__text
+              最大10枚までアップロードできます
+            #upload
+              .item-num-0#upload__container
+                = f.fields_for :item_photos do |i|
+                  = i.label :image do
+                    .input_area
+                      = i.file_field :image, type: "file", name: "item[item_photos_attributes][][image]", value: "", style: "display:none"
+                      = icon("fa", "camera", class: "icon")
+                      .messages
+                        %p
+                          ドラッグアンドドロップ
+                        %p
+                          またはクリックしてファイルをアップロード
+            .images-box__message
+              画像がありません
     
     .items-section
       .items-main
