部分テンプレート化
共通する部分（ヘッダー・フッター）を
部分テンプレート化

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import "reset";
+@import "modules/header";
+@import "modules/footer";
 @import "modules/top";
 @import "font-awesome-sprockets";
 @import "font-awesome";
