--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -8,104 +8,6 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  header {
-    width: 100%;
-    height: 100px;
-    .header-inner {
-      height: 100px;
-      width: 1040px;
-      margin: 0 auto;
-      .mainheader {
-        position: relative;
-        height: 60px;
-        display: flex;
-        .logo-box {
-          .logo {
-            width: 140px;
-            height: 40px;
-            margin-top: 15px;
-          }
-        }
-        .search {
-          width: 100%;
-          margin-left: 30px;
-          margin-top: 15px;
-          .search-box {
-            width: 870px;
-            height: 36px;
-            display: flex;
-            &__input {
-              width: 834px;
-              height: 36px;
-            }
-            &__submit {
-              width: 36px;
-              height: 36px;
-              background-color: #3ccace;
-              &__icon {
-                width: 20px;
-                height: 20px;
-                margin: 8px 8px;
-              }
-              
-              
-            }
-          }
-        }
-      }
-      .nav {
-        height: 30px;
-        width: 1040px;
-        margin-top: 10px;
-        display: flex;
-        font-size: 14px;
-        .list-left {
-          display: flex;
-          width: 300px;
-          height: 30px;
-          &__category {
-            margin-right: auto;
-            a {
-              text-decoration: none; 
-              color: black;   
-              cursor: pointer;
-            }
-          }
-          &__brand {
-            margin-right: auto;
-            a {
-              text-decoration: none; 
-              color: black;  
-              cursor: pointer;   
-            }
-          }
-        }
-        .list-right {
-          width: 300px;
-          height: 30px;
-          margin-left: auto;
-          text-align: right;
-          display: flex;
-          &__login {
-            margin-left: auto;
-            a {
-              text-decoration: none;
-              color: black; 
-              cursor: pointer;  
-            }
-          }
-          &__signup {
-            margin-left: auto;
-            a {
-              text-decoration: none;
-              color: black;   
-              cursor: pointer;
-            }
-          }
-        }
-      }
-    }
-  }
   
   .main {
     .main-visual {
@@ -455,8 +357,7 @@ body {
       justify-content: space-around;
       flex-direction: row-reverse;
       .item:hover {
-        background-color: rgba(44, 89, 240, 0.4);
-        transition: color 0.3s ease 0s;
+        opacity: 0.5;
       }
       .item {
         width: 220px;
@@ -545,93 +446,4 @@ body {
       }
     }
   } 
-    footer {
-      width: 1440px;
-      height: 350px;
-      background-color: black;
-      color: white;
-      position: relative;
-      
-      .contents {
-        width: 840px;
-        height: 150px;
-        display: flex;
-        position: absolute;
-        margin: 100px 300px;
-        .content {
-          width: 260px;
-          height: 72px;
-          text-align: center;
-          margin: 0 20px;
-          &__header {
-            font-size: 16px;
-            font-weight: bold;
-          }
-          ul {
-            
-            li {
-              a {
-                font-size: 12PX;
-                color: white;
-                text-decoration: none;
-                line-height: 32px;
-              }
-              a:hover {
-                text-decoration: underline;
-              }
-            }
-          }
-        }
-      }
-      
-      .footer-logo {
-        background-color: black;
-        color: white;
-        .logo-box {
-          width: 160px;
-          height: 40px;
-          margin-left: 640px;
-          margin-top: 250px;
-          position: absolute;
-          &__logo {
-            width: 160px;
-            height: 46px;
-          }
-        } 
-      }   
-      .copy {
-        height: 16px;
-        width: 80px;
-        text-align: center;
-        position: absolute;
-        font-size: 14px;
-        margin-top: 300px;
-        margin-left: 680px;
-      }
-    }
-    
-    .p-btn {
-      width: 120px;
-      height: 116px;
-      background-color: #3ccace;
-      text-align: center;
-      color: white;
-      margin: 0 0 0 auto;
-      padding: 15px;
-      bottom: 32px;
-      right: 32px;
-      border-radius: 4%;
-      display: block;
-      position: fixed;
-      &__text {
-        font-size: 18px;
-        margin-bottom: 5px;
-      }
-      &__icon {
-        .tag {
-          width: 54px;
-          height: 54px;
-        }
-      }
-    }
 }
