--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,2 +1,155 @@
-%h1 Items#index
-%p Find me in app/views/items/index.html.erb
+%body
+  = render "header"
+
+  .main 
+    .main-visual
+      .content
+        .content__subtitle
+          %h2
+            人生を変えるフリマアプリ
+        .content__text
+          %p
+            FURIMAは誰でも簡単に出品・購入できる
+          %p
+            フリマアプリです
+        .content__btn
+
+    .top-intro
+      .sub-title
+        %h2
+          FURIMAが選ばれる3つの理由
+        .after
+      .list-box
+        .lists
+          .first
+            .first__pic
+              .number-1
+                1
+            .first__text
+              .header-1
+                .color
+                  3分
+                .text-1
+                  ですぐに出品
+              .sub-text
+                スマホで入力するだけで簡単に出品できる！
+          .second
+            .second__pic
+              .number-2
+                2
+            .second__text
+              .header-2
+                .color
+                  シンプル
+                .text-2
+                  で使いやすい
+              .sub-text
+                めんどくさい入力は必要なく、検索も購入もスムーズ！
+          .third
+            .third__pic
+              .number-3
+                3
+            .third__text
+              .header-3
+                .color
+                  手数料
+                .text-3
+                  業界最安
+              .sub-text
+                最大3%でお得に出品&購入！
+    .mid
+      .mid__inner
+        .sub-title
+          会員数日本一位
+        .text
+          %p
+            FURIMAは、フリマアプリで最も人気。
+          %p
+            出品・購入回数も業界最多です！
+          %p
+            ほしかったあの商品に出会えるかもしれません。 
+        .btn
+          = link_to image_tag("kisspng-app-store-apple-download-logo-app-store-5b500d98b7efd5.2471397315319730167534.png", class: "logo")
+          = link_to image_tag("get-it-on-google-play-png-get-it-on-google-play-png-519.png", class: "logo2")
+
+    .key
+      .key-box
+        .head
+          .title
+            FURIMAの特徴
+          .after
+        .items
+          .item
+            .item__img
+              = image_tag("icon-01.png", class: "icon1")
+            .item__subtitle
+              簡単に売り買いできる
+            .item__detail
+              スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
+          .item
+            .item__img
+              = image_tag("icon-03.png", class: "icon1")
+            .item__subtitle
+              売上金は即日振込みに対応
+            .item__detail
+              午前9時までに振込を依頼いただければ、翌日に指定の口座に入金いたします!
+          .item
+            .item__img
+              = image_tag("icon-04.png", class: "icon1")
+            .item__subtitle
+              様々な支払いに対応
+            .item__detail
+              お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
+    .pickup-1
+      .pickup-1__head
+        ピックアップカテゴリー
+      .pickup-1__topic
+        =link_to "#", class: "jumpto-listing" do
+          新規投稿商品
+        .item-boxes
+          - @items.each do |item|
+            =link_to item_path(item.id), class: "item" do
+              .photo
+                - item.item_photos.each do |item_photo|
+                  = image_tag item_photo.image
+              .supplement
+                .information
+                  .information__item-name
+                    = item.name
+                  .information__item-price
+                    = "#{item.price}円"
+                  .information__price-option
+                    (税込)
+                .like-function
+                  .like-btn
+                    = icon('fas', 'star')
+                  .like-count
+                    0
+          
+    .pickup-2
+      .pickup-2__head
+        ピックアップブランド
+      .pickup-2__topic
+        =link_to "#", class: "jumpto-archive" do
+          アーカイバ
+        .item-boxes
+          - @items.each do |item|
+            =link_to item_path(item.id), class: "item" do
+              .photo
+                - item.item_photos.each do |item_photo|
+                  = image_tag item_photo.image
+              .supplement
+                .information
+                  .information__item-name
+                    = item.name
+                  .information__item-price
+                    = "#{item.price}円"
+                  .information__price-option
+                    (税込)
+                .like-function
+                  .like-btn
+                    = icon('fas', 'star')
+                  .like-count
+                    0
+    
+  = render "footer"
