商品詳細ページ（マークアップ）
リンク先は全て root_path を仮としておいています。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "modules/header";
 @import "modules/footer";
 @import "modules/top";
+@import "modules/show";
 @import "font-awesome-sprockets";
 @import "font-awesome";
