よく使うscssの関数化
その他細かい修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 @import "reset";
+@import "config/colors";
 @import "modules/header";
 @import "modules/footer";
-@import "modules/top";
+@import "modules/index";
 @import "modules/show";
 @import "font-awesome-sprockets";
 @import "font-awesome";
