--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -368,9 +368,7 @@ body {
         .photo > img {
           height: 150px;
           width: 100%;
-          text-align: center;
-          line-height: 150px;
-          background-color: rgba(21, 235, 21, 0.6);
+          object-fit: cover;
         }
         .supplement {
           padding: 16px;
