--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -2,7 +2,7 @@
   .header-inner
     .mainheader
       .logo-box
-        = link_to image_tag("logo.png",class: "logo")
+        = link_to image_tag("logo.png",class: "logo"), root_path
       .search
         = form_with do |f|
           .search-box
