出品者のみ、削除・編集を許可

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -6,12 +6,13 @@
     .item-information
       .item-information__name
         = @item.name
-      .item-information__link-box
-        %ul
-          %li
-            = link_to "商品を編集する", "#", class: "edit-btn"
-          %li
-            = link_to "商品を削除する", "#s", class: "delete-btn"
+      = if user_signed_in? && current_user.id == @item.user_id
+        .item-information__link-box
+          %ul
+            %li
+              = link_to "商品を編集する", "#", class: "edit-btn"
+            %li
+              = link_to "商品を削除する", "#s", class: "delete-btn"
       %ul
         %li.heading-photo
           = image_tag @item.item_photos.find_by(params[:id]).image
