--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -1,7 +1,7 @@
 .appbanner {
   width: 1440;
   height: 400px;
-  background-image: url("bg-appBanner-pict.jpg");
+  background-image: image-url("bg-appBanner-pict.jpg");
   background-size: cover;
   position: relative;
   background-position: center;
