--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -13,7 +13,7 @@ body {
     .main-visual {
       height: 560px;
       width: 100%;
-      background-image: url("bg-mainVisual-pict_pc.jpg");
+      background-image: image-url("bg-mainVisual-pict_pc.jpg");
       background-size: cover;
       position: relative;
       .content {
@@ -77,7 +77,7 @@ body {
             &__pic {
               width: 300px;
               height: 300px;
-              background-image: url("pict-reason-01.jpg");
+              background-image: image-url("pict-reason-01.jpg");
               background-size: contain;
               background-repeat: no-repeat;
               .number-1 {
@@ -119,7 +119,7 @@ body {
             height: 480px;
             margin-left: 60px;
             &__pic {
-              background-image: url("pict-reason-02.jpg");
+              background-image: image-url("pict-reason-02.jpg");
               background-size: contain;
               background-repeat: no-repeat;
               width: 300px;
@@ -163,7 +163,7 @@ body {
             height: 480px;
             margin-left: auto;
             &__pic {
-              background-image: url("pict-reason-03.jpg");
+              background-image: image-url("pict-reason-03.jpg");
               background-size: contain;
               background-repeat: no-repeat;
               width: 300px;
@@ -209,7 +209,7 @@ body {
       }
     }
     .mid {
-      background-image: url("bg-topMiddleDl-pict.jpg");
+      background-image: image-url("bg-topMiddleDl-pict.jpg");
       background-size: cover;
       background-position: bottom right;
       width: 1440px;
