showページ購入ボタン色変更
FURIMAのイメージに合うように修正

--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -125,7 +125,7 @@
   }
   .purchase-btn {
     &__btn-text {
-      background-color: red;
+      background-color: $link_font_color;
       width: 280px;
       height: 60px;
       border-radius: 40px;
