部分テンプレートの使用
共通で使う部分のテンプレート化

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,10 @@
 @import "reset";
 @import "config/colors";
+@import "modules/detail-table";
 @import "modules/header";
 @import "modules/footer";
 @import "modules/index";
 @import "modules/show";
+@import "modules/buy";
 @import "font-awesome-sprockets";
 @import "font-awesome";
