商品購入確認ページへの遷移
商品詳細ページから飛ぶように、
ルーティング・コントローラ・views/items/show.html.hamlを変更。

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -43,7 +43,7 @@
               .purchase-btn__text
                 購入へ進む
         %else
-          = link_to root_path, class: "purchase-btn" do
+          = link_to buy_item_path, class: "purchase-btn" do
             .purchase-btn__btn-text
               ログインして購入する
         = link_to root_path, class: "report-btn" do
