--- a/app/views/devise/registrations/create_information.haml
+++ b/app/views/devise/registrations/create_information.haml
@@ -1,2 +1,7 @@
-%h2 登録が完了しました
-= link_to "トップへ戻る", root_path
+.userRegistration
+  .userRegistration__header
+    = image_tag("logo.png",class: "logo")
+  .userRegistration__content
+    %h2 登録が完了しました
+    .userRegistration__content__submit
+      = link_to "トップへ戻る", root_path, {class: "submitBtn"}
