--- a/app/views/devise/registrations/new_delivery_address.html.haml
+++ b/app/views/devise/registrations/new_delivery_address.html.haml
@@ -1,46 +1,50 @@
-%h2 商品送付先住所登録
-= form_for @delivery_address do |f|
-  = render "devise/shared/error_messages", resource: @delivery_address
-  .field
-    = f.label :delivery_firstname
-    %br/
-    = f.text_field :delivery_firstname
-  .field
-    = f.label :delivery_lastname
-    %br/
-    = f.text_field :delivery_lastname
-  .field
-    = f.label :delivery_firstname_hiragana
-    %br/
-    = f.text_field :delivery_firstname_hiragana
-  .field
-    = f.label :delivery_lastname_hiragana
-    %br/
-    = f.text_field :delivery_lastname_hiragana
-  .field
-    = f.label :postal_code
-    %br/
-    = f.text_field :postal_code
-  .field
-    = f.label :prefecture
-    %br/
-    = f.text_field :prefecture
-  .field
-    = f.label :city
-    %br/
-    = f.text_field :city
-  .field
-    = f.label :address
-    %br/
-    = f.text_field :address
-  .field
-    = f.label :room_number
-    %br/
-    = f.text_field :room_number
-  .field
-    = f.label :phone_number
-    %br/
-    = f.text_field :phone_number
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.userCreated
+  .userCreated__header
+    = image_tag("logo.png",class: "logo")
+  .userCreated__content
+    %h1 商品送付先住所登録
+    = form_for @delivery_address do |f|
+      = render "devise/shared/error_messages", resource: @delivery_address
+      .field
+        = f.label :delivery_lastname, "苗字 (必須)", {class: "label"}
+        %br/
+        = f.text_field :delivery_lastname
+      .field
+        = f.label :delivery_firstname, "名前 (必須)", {class: "label"}
+        %br/
+        = f.text_field :delivery_firstname
+      .field
+        = f.label :delivery_lastname_hiragana, "苗字 ひらがな (必須)", {class: "label"}
+        %br/
+        = f.text_field :delivery_lastname_hiragana
+      .field
+        = f.label :delivery_firstname_hiragana, "名前 ひらがな (必須)", {class: "label"}
+        %br/
+        = f.text_field :delivery_firstname_hiragana
+      .field
+        = f.label :postal_code, "郵便番号 (必須)", {class: "label"}
+        %br/
+        = f.text_field :postal_code, placeholder: 'ハイフンなし  例) 1111111'
+      .field
+        = f.label :prefecture, "都道府県 (必須)", {class: "label"}
+        %br/
+        = f.text_field :prefecture
+      .field
+        = f.label :city, "市区町村 (必須)", {class: "label"}
+        %br/
+        = f.text_field :city
+      .field
+        = f.label :address, "番地 (必須)", {class: "label"}
+        %br/
+        = f.text_field :address
+      .field
+        = f.label :room_number, "部屋番号", {class: "label"}
+        %br/
+        = f.text_field :room_number
+      .field
+        = f.label :phone_number, "携帯番号", {class: "label"}
+        %br/
+        = f.text_field :phone_number
+      .actions
+        = f.submit "Sign up", {class: "btn"}
+    -# = render "devise/shared/links"
