--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -76,6 +76,22 @@ header {
         margin-left: auto;
         text-align: right;
         display: flex;
+        &__mypage {
+          margin-left: auto;
+          a {
+            text-decoration: none;
+            color: black; 
+            cursor: pointer;  
+          }
+        }
+        &__logout {
+          margin-left: auto;
+          a {
+            text-decoration: none;
+            color: black; 
+            cursor: pointer;  
+          }
+        }
         &__login {
           margin-left: auto;
           a {
