--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -21,9 +21,13 @@
           = link_to do
             ブランド
       .list-right
-        .list-right__login
-          = link_to do
-            ログイン
-        .list-right__signup
-          = link_to do
-            新規会員登録
+        - if user_signed_in?
+          .list-right__mypage
+            = link_to "マイページ", "#"
+          .list-right__logout
+            = link_to "ログアウト", destroy_user_session_path, method: :delete
+        - else
+          .list-right__login
+            = link_to "新規登録", new_user_registration_path
+          .list-right__signup
+            = link_to "ログイン", new_user_session_path
