データの表示
現時点でできる部分のみ。以降はサーバサイド実装にて追記。

--- a/app/assets/stylesheets/modules/_buy.scss
+++ b/app/assets/stylesheets/modules/_buy.scss
@@ -26,7 +26,6 @@
   &__image {
     width: 200px;
     height: 200px;
-    background-color: orchid;
   }
   &__form {
     width: 580px;
@@ -42,11 +41,14 @@
       justify-content: flex-end;
       font-size: 18px;
       &__shipping-fee {
-        background-color: $link-font-color;
         margin-right: 20px;
       }
     }
-
+  .simple-information__image > img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
 }
 
 .payment {
