--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -34,3 +34,7 @@
       .purchase-btn__text
         購入する
 = render "footer"
+
+= form_tag action: :pay, method: :post do
+  :plain
+    <script type="text/javascript" src="https://checkout.pay.jp" class="payjp-button" data-key="pk_test_30ca0f1531019a7f73cdfae4"></script>
